--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.6",
-    "aws-cdk-lib": "2.70.0",
+    "aws-cdk-lib": "^2.70.0",
     "constructs": "^10.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
@@ -20,5 +20,8 @@
   "peerDependencies": {
     "aws-cdk-lib": "2.70.0",
     "constructs": "^10.0.0"
+  },
+  "dependencies": {
+    "cdk": "^2.70.0"
   }
 }
